--- a/src/Assets/styles/reviews.scss
+++ b/src/Assets/styles/reviews.scss
@@ -1,4 +1,5 @@
 @import "./base.scss";
+@import url("https://fonts.googleapis.com/css2?family=Nerko+One&family=Orbitron:wght@400;500;600;700;800;900&display=swap");
 .reviews {
   position: relative;
   background: $darkblue;
@@ -49,5 +50,59 @@
         }
       }
     }
+  }
+}
+
+.swiper__wrapper {
+  padding: 2rem 0;
+}
+.swiper {
+  min-height: 500px;
+}
+.review {
+  position: relative;
+  display: flex;
+  font-size: 16px;
+  padding: 5px;
+  &__card {
+    position: relative;
+    width: 100%;
+    padding: 2rem 0;
+    display: flex;
+  }
+  svg {
+    width: 30px;
+    fill: $yellow;
+  }
+  &__topborder {
+    width: 100%;
+    height: 1px;
+    position: absolute;
+
+    top: 0;
+    left: 0;
+    background: #fff;
+  }
+  &__text {
+    span {
+      font-family: "Haghisty_DEMO", "sans-serif";
+      font-size: 30px;
+      font-weight: 600;
+      color: $yellow;
+    }
+  }
+  &__img {
+    width: 70px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 35%;
+  }
+  &__profile {
+    position: absolute;
+    left: 5rem;
+    bottom: -1.5rem;
+    display: flex;
+    flex-direction: column;
+    font-family: cursive;
   }
 }
