--- a/src/Assets/styles/projects.scss
+++ b/src/Assets/styles/projects.scss
@@ -145,9 +145,17 @@
   }
 }
 
+.project__tags {
+  display: flex;
+  flex-direction: row;
+  &:nth-last-child(0) {
+    display: none;
+  }
+}
 .dependencyLinks {
   position: relative;
   font-family: sans-serif;
+
   &span {
     display: flex;
     justify-content: space-between;
@@ -171,5 +179,10 @@
       //transform: scale3d(1, 1, 1);
       transition-timing-function: cubic-bezier(0.8, 1, 0.7, 1);
     }
+  }
+}
+@media (max-width: 1343px) {
+  .project .cirleEyeButton {
+    transform: translate(-14rem, -3rem);
   }
 }
