--- a/src/Assets/styles/faq.scss
+++ b/src/Assets/styles/faq.scss
@@ -1,6 +1,6 @@
 .faq {
   position: relative;
-  background: linear-gradient(to right, #ec11cf, #eb68d9, #ffa3f3);
+  background: linear-gradient(to right, #820df0, #b050f0, #b180e9);
   &__wrap {
     padding: 3rem 4.5%;
   }
