--- a/src/Assets/styles/contact.scss
+++ b/src/Assets/styles/contact.scss
@@ -1,8 +1,10 @@
 @import "faq.scss";
+
 .contact {
   position: relative;
-  background: linear-gradient(to right, #ec11cf, #eb68d9, #ffa3f3);
+  background: linear-gradient(to right, #820df0, #b050f0, #b180e9);
   font-family: sans-serif;
+  background-blend-mode: multiply;
   width: 100%;
   @media (max-width: 1100) {
     padding: 2rem;
@@ -16,6 +18,51 @@
     font-size: 22px;
     font-weight: 600;
   }
+
+  &__profile {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 3rem;
+    &-item {
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      img {
+        width: 70px;
+        height: 90px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+    }
+    &-col {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      font-size: 17px;
+      z-index: 1;
+    }
+    &-bg {
+      position: absolute;
+      width: 250px;
+      height: 100px;
+      background: #6e3c97;
+      border-radius: 5px;
+      left: 20%;
+    }
+  }
+  &__socials {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+    padding-bottom: 3rem;
+    & a {
+      font-size: 25px;
+      text-transform: capitalize;
+    }
+  }
   &__wrapper {
     width: 90%;
     margin: auto;
@@ -23,6 +70,23 @@
   }
   &__header {
     margin-bottom: 3rem;
+  }
+  &__footer {
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    &-link {
+      width: 100%;
+      text-align: center;
+      font-size: 20px;
+      @media (min-width: 900px) {
+        font-style: 14px;
+      }
+    }
   }
 }
 
@@ -95,15 +159,7 @@
   }
 }
 
-@media (max-width: 800px) {
-  .contact .contactButton {
-    background: #eb68d9;
-    transform: scale3d(1, 1, 1);
-    font-size: 19px;
-  }
-}
-
-@media (min-width: 768px) {
+@media (max-width: 610px) {
   .form {
     &__info {
       flex-direction: column;
