--- a/src/Assets/styles/contact.scss
+++ b/src/Assets/styles/contact.scss
@@ -21,9 +21,9 @@
   &__profile {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
-    gap: 3rem;
+    gap: 2rem;
     &-item {
       position: relative;
       display: flex;
@@ -60,26 +60,32 @@
     & a {
       font-size: 25px;
       text-transform: capitalize;
+      
     }
   }
   &__wrapper {
-    width: 90%;
-    margin: auto;
     height: 100vh;
   }
   &__header {
     margin-bottom: 3rem;
+    width: 90%;
+   margin: auto;
   }
   &__footer {
     left: 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 100%;
+    width: 100% !important;
+    padding: 1rem 0;
     padding-bottom: 2rem;
+    background: #360a5f;
     &-link {
       width: 100%;
+      color: #fff;
       text-align: center;
+      display: flex; 
+      justify-content: space-evenly;
       font-size: 20px;
       @media (min-width: 900px) {
         font-style: 14px;
@@ -89,6 +95,9 @@
 }
 
 .form {
+  width: 90%;
+  margin: auto;
+  
   &__info {
     display: flex;
     align-items: center;
@@ -108,11 +117,7 @@
       }
     }
   }
-  &__profile,
-  &__socials,
-  &__footer {
-    position: absolute;
-  }
+  
   &__flex {
     display: flex;
     gap: 1rem;
@@ -132,7 +137,7 @@
     .contactButton {
       font-weight: 900;
       &:before {
-        background: #0f0f0f;
+        background: #3a3939;
       }
       &:after {
         display: none;
@@ -143,7 +148,17 @@
     }
   }
 }
+.contact__profile, .contact__socials{
+  background: linear-gradient(to right, #820df0, #b050f0, #b180e9);
+ 
+}
+.dependencyLinks{
+  margin: auto;
+}
+.contact__profile-col{
 
+  transform: scale3d(0.7, 0.7, 0.7);
+}
 @media (max-width: 900px) {
   .form {
     &__flex {
