--- a/src/Assets/styles/landing.scss
+++ b/src/Assets/styles/landing.scss
@@ -6,8 +6,8 @@
   height: 100vh;
   background: #000;
   color: white;
-
-  background-image: url("../images/background/22.jpg");
+  background: transparent;
+  // background-image: url("../images/background/22.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   .intro {
