--- a/src/Assets/styles/base.scss
+++ b/src/Assets/styles/base.scss
@@ -16,6 +16,7 @@
     line-height: 1.5;
     font-family: "Poppins", sans-serif;
     -webkit-font-smoothing: subpixel-antialiased;
+    height: 100vh;
   }
   button,
   input,
