--- a/src/Assets/styles/landing.scss
+++ b/src/Assets/styles/landing.scss
@@ -68,7 +68,7 @@
   }
   .header {
     position: absolute;
-    top: 1rem;
+    top: -100%;
     left: 50%;
     transform: translate(-50%);
     z-index: 2;
@@ -77,6 +77,7 @@
       justify-content: space-between;
       width: 60vw;
       align-items: center;
+     
     }
     &__left {
       display: flex;
@@ -172,7 +173,7 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 10rem;
+    bottom: -100%;
     display: flex;
     align-items: center;
     z-index: 2;
@@ -211,7 +212,7 @@
 
   .scrollDown {
     position: absolute;
-    bottom: 3rem;
+    bottom: -100%;
     left: 50%;
     transform: translateX(-50%);
     width: 50px;
@@ -291,4 +292,10 @@
       }
     }
   }
+}
+
+.landing canvas {
+  position: absolute;
+ 
+  
 }
